--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Modules/Neurotoxin.Godspeed.Modules.csproj
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Modules/Neurotoxin.Godspeed.Modules.csproj
@@ -92,7 +92,9 @@
     <Resource Include="HexViewer\Resources\warning.ico" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.Config" />
+    <None Include="App.Config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
