--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Neurotoxin.Godspeed.Shell.csproj
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Neurotoxin.Godspeed.Shell.csproj
@@ -120,6 +120,7 @@
     <Compile Include="Constants\CopyMode.cs" />
     <Compile Include="Constants\DisableOption.cs" />
     <Compile Include="Constants\ErrorResolutionBehavior.cs" />
+    <Compile Include="Constants\FsdContentItemProperty.cs" />
     <Compile Include="Constants\FsdContentScanTrigger.cs" />
     <Compile Include="Constants\FtpServerType.cs" />
     <Compile Include="Constants\FtpTransferDirection.cs" />
@@ -208,6 +209,7 @@
     <Compile Include="ViewModels\CacheMigrationViewModel.cs" />
     <Compile Include="ViewModels\CompressedFileContentViewModel.cs" />
     <Compile Include="Constants\FileBlockHealthStatus.cs" />
+    <Compile Include="ViewModels\FreestyleDatabaseCheckerViewModel.cs" />
     <Compile Include="ViewModels\GpdFileEntryViewModel.cs" />
     <Compile Include="ViewModels\GpdFileViewModel.cs" />
     <Compile Include="ViewModels\InputDialogViewModel.cs" />
@@ -246,6 +248,9 @@
     </Compile>
     <Compile Include="Views\Controls\ProgressNotificationBar.xaml.cs">
       <DependentUpon>ProgressNotificationBar.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\FreestyleDatabaseCheckerWindow.xaml.cs">
+      <DependentUpon>FreestyleDatabaseCheckerWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\Dialogs\LoginDialog.xaml.cs">
       <DependentUpon>LoginDialog.xaml</DependentUpon>
@@ -362,6 +367,10 @@
     <Page Include="Views\Controls\ProgressNotificationBar.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\FreestyleDatabaseCheckerWindow.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="Views\Dialogs\LoginDialog.xaml">
       <Generator>MSBuild:Compile</Generator>
