--- a/Neurotoxin.Godspeed/packages/repositories.config
+++ b/Neurotoxin.Godspeed/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\Neurotoxin.Godspeed.Core\packages.config" />
+  <repository path="..\Neurotoxin.Godspeed.Shell.Tests\packages.config" />
   <repository path="..\Neurotoxin.Godspeed.Shell\packages.config" />
 </repositories>
