--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell.Tests/Neurotoxin.Godspeed.Shell.Tests.csproj
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell.Tests/Neurotoxin.Godspeed.Shell.Tests.csproj
@@ -54,6 +54,9 @@
     </CodeAnalysisDependentAssemblyPaths>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Dummies\DummyContent.cs" />
+    <Compile Include="Dummies\DummyContentViewModel.cs" />
+    <Compile Include="Helpers\C.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TransferManagerViewModelTests.cs" />
   </ItemGroup>
