--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Core/Neurotoxin.Godspeed.Core.csproj
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Core/Neurotoxin.Godspeed.Core.csproj
@@ -142,6 +142,7 @@
     <Compile Include="Io\Gpd\XdbfFreeSpaceEntry.cs" />
     <Compile Include="Io\Stfs\Data\Certificate.cs" />
     <Compile Include="Io\Stfs\Data\PackageSignature.cs" />
+    <Compile Include="Models\INamed.cs" />
     <Compile Include="Models\ModelFactory.cs" />
     <Compile Include="Models\ModelInterceptor.cs" />
     <Compile Include="Models\IBinaryModel.cs" />
@@ -153,7 +154,7 @@
     <Compile Include="Io\Stfs\Package.cs" />
     <Compile Include="Io\Stfs\Data\StfsVolumeDescriptor.cs" />
     <Compile Include="Models\OffsetTable.cs" />
-    <Compile Include="Models\Tree.cs" />
+    <Compile Include="Models\Tree2.cs" />
     <Compile Include="Net\Cryptography\GetChecksum.cs" />
     <Compile Include="Net\Cryptography\MD5.cs" />
     <Compile Include="Net\Cryptography\XCRC.cs" />
