--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell.Tests/Neurotoxin.Godspeed.Shell.Tests.csproj
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell.Tests/Neurotoxin.Godspeed.Shell.Tests.csproj
@@ -39,14 +39,17 @@
     <Reference Include="Microsoft.Practices.Composite">
       <HintPath>..\packages\Prism\Microsoft.Practices.Composite.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Practices.Composite.Presentation, Version=2.0.1.0, Culture=neutral, PublicKeyToken=2a57e53aa571c045, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.Practices.Unity">
       <HintPath>..\packages\Prism\Microsoft.Practices.Unity.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
+    <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <CodeAnalysisDependentAssemblyPaths Condition=" '$(VS100COMNTOOLS)' != '' " Include="$(VS100COMNTOOLS)..\IDE\PrivateAssemblies">
@@ -56,11 +59,16 @@
   <ItemGroup>
     <Compile Include="Dummies\DummyContent.cs" />
     <Compile Include="Dummies\DummyContentViewModel.cs" />
+    <Compile Include="Dummies\FakingRules.cs" />
     <Compile Include="Helpers\C.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TransferManagerViewModelTests.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Neurotoxin.Godspeed.Core\Neurotoxin.Godspeed.Core.csproj">
+      <Project>{6BC68F07-4B7E-4143-9795-973CAC9EAAB4}</Project>
+      <Name>Neurotoxin.Godspeed.Core</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Neurotoxin.Godspeed.Presentation\Neurotoxin.Godspeed.Presentation.csproj">
       <Project>{A8BF8EBE-6CE5-48DD-B88F-37DCC4F18106}</Project>
       <Name>Neurotoxin.Godspeed.Presentation</Name>
