--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Presentation/Neurotoxin.Godspeed.Presentation.csproj
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Presentation/Neurotoxin.Godspeed.Presentation.csproj
@@ -115,6 +115,7 @@
     <Compile Include="Infrastructure\Constants\LoadCommand.cs" />
     <Compile Include="Infrastructure\DataResource.cs" />
     <Compile Include="Infrastructure\IViewModel.cs" />
+    <Compile Include="Infrastructure\IWorkHandler.cs" />
     <Compile Include="Infrastructure\MandatoryProperty.cs" />
     <Compile Include="Infrastructure\MapDataGridRowEditEndingEventToCommand.cs" />
     <Compile Include="Infrastructure\MapDataGridCellEditEndingEventToCommand.cs" />
@@ -136,11 +137,12 @@
     <Compile Include="Infrastructure\ModuleLoadInfo.cs" />
     <Compile Include="Infrastructure\ModuleViewBase.cs" />
     <Compile Include="Infrastructure\ModuleViewModelBase.cs" />
+    <Compile Include="Infrastructure\SyncWorkHandler.cs" />
     <Compile Include="Infrastructure\UIThread.cs" />
     <Compile Include="Infrastructure\UnityInstance.cs" />
     <Compile Include="Infrastructure\Utilities.cs" />
     <Compile Include="Infrastructure\ViewModelBase.cs" />
-    <Compile Include="Infrastructure\WorkerThread.cs" />
+    <Compile Include="Infrastructure\AsyncWorkHandler.cs" />
     <Compile Include="Primitives\StatusBarBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Extensions\UIElementExtensions.cs" />
