Copy notification tests

--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell.Tests/Neurotoxin.Godspeed.Shell.Tests.csproj
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell.Tests/Neurotoxin.Godspeed.Shell.Tests.csproj
@@ -61,6 +61,7 @@
   <ItemGroup>
     <Compile Include="Dummies\ConsoleWriter.cs" />
     <Compile Include="Dummies\Range.cs" />
+    <Compile Include="Dummies\TreeItemStream.cs" />
     <Compile Include="Extensions\ListExtensions.cs" />
     <Compile Include="FakingTests.cs" />
     <Compile Include="Dummies\DummyContent.cs" />
