--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/packages.config
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Extended.Wpf.Toolkit" version="2.2.0" targetFramework="net40-Client" />
   <package id="Fizzler" version="0.9.3" targetFramework="net40-Client" />
   <package id="HtmlAgilityPack" version="1.4.6" targetFramework="net40-Client" />
   <package id="sharpcompress" version="0.10.1.3" targetFramework="net40-Client" />
