--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Neurotoxin.Godspeed.Shell.csproj
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Neurotoxin.Godspeed.Shell.csproj
@@ -88,6 +88,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Management" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Windows.Interactivity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -107,6 +108,9 @@
     <Reference Include="XAMLMarkupExtensions">
       <HintPath>..\packages\XAMLMarkupExtensions.1.1.6.3\lib\net40\XAMLMarkupExtensions.dll</HintPath>
     </Reference>
+    <Reference Include="Xceed.Wpf.Toolkit">
+      <HintPath>..\packages\Extended.Wpf.Toolkit.2.2.0\lib\net40\Xceed.Wpf.Toolkit.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
@@ -118,7 +122,6 @@
     <Compile Include="Constants\ConnectionType.cs" />
     <Compile Include="Constants\CopyAction.cs" />
     <Compile Include="Constants\CopyActionScope.cs" />
-    <Compile Include="Constants\CopyMode.cs" />
     <Compile Include="Constants\DisableOption.cs" />
     <Compile Include="Constants\ErrorResolutionBehavior.cs" />
     <Compile Include="Constants\FsdContentItemProperty.cs" />
@@ -132,6 +135,9 @@
     <Compile Include="Constants\ModuleLoadInfoCollection.cs" />
     <Compile Include="Constants\OpenStfsPackageMode.cs" />
     <Compile Include="Constants\RecognitionState.cs" />
+    <Compile Include="Constants\RemoteCopyMode.cs" />
+    <Compile Include="Constants\ResumeCapability.cs" />
+    <Compile Include="Constants\Shutdown.cs" />
     <Compile Include="Constants\Strings.cs" />
     <Compile Include="Constants\TitleType.cs" />
     <Compile Include="Constants\ToggleSelectionMode.cs" />
@@ -164,7 +170,10 @@
     <Compile Include="Constants\MessageIcon.cs" />
     <Compile Include="Events\CachePopulatedEvent.cs" />
     <Compile Include="Events\ConnectionDetailsChangedEvent.cs" />
+    <Compile Include="Events\CloseFtpTraceWindowEvent.cs" />
+    <Compile Include="Events\ShowFtpTraceWindowEvent.cs" />
     <Compile Include="Events\FileListPaneViewModelItemsChangedEvent.cs" />
+    <Compile Include="Events\LogChangedEventHandler.cs" />
     <Compile Include="Events\RaiseCanExecuteChangesEvent.cs" />
     <Compile Include="Events\ShowCorrespondingErrorEvent.cs" />
     <Compile Include="Events\FreestyleDatabaseCheckEvent.cs" />
@@ -223,9 +232,11 @@
     <Compile Include="Interfaces\IFormData.cs" />
     <Compile Include="Reporting\WindowScreenshotReport.cs" />
     <Compile Include="ViewModels\CacheMigrationViewModel.cs" />
+    <Compile Include="ViewModels\CommonViewModelBase.cs" />
     <Compile Include="ViewModels\CompressedFileContentViewModel.cs" />
     <Compile Include="Constants\FileBlockHealthStatus.cs" />
     <Compile Include="Interfaces\ISettingsViewModel.cs" />
+    <Compile Include="ViewModels\FtpTraceViewModel.cs" />
     <Compile Include="ViewModels\TransferManagerViewModel.cs" />
     <Compile Include="ViewModels\FreestyleDatabaseCheckerViewModel.cs" />
     <Compile Include="ViewModels\GpdFileEntryViewModel.cs" />
@@ -261,11 +272,16 @@
     <Compile Include="ViewModels\PaneViewModelBase.cs" />
     <Compile Include="ViewModels\StfsPackageContentViewModel.cs" />
     <Compile Include="Commands\FileManagerCommands.cs" />
+    <Compile Include="Views\Behaviors\TextBoxAutoScrollToBottomBehavior.cs" />
+    <Compile Include="Views\Behaviors\MenuItemButtonGroupBehavior.cs" />
     <Compile Include="Views\ConnectionsPane.xaml.cs">
       <DependentUpon>ConnectionsPane.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\Controls\ProgressNotificationBar.xaml.cs">
       <DependentUpon>ProgressNotificationBar.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\FtpTraceWindow.xaml.cs">
+      <DependentUpon>FtpTraceWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\FreestyleDatabaseCheckerWindow.xaml.cs">
       <DependentUpon>FreestyleDatabaseCheckerWindow.xaml</DependentUpon>
@@ -385,6 +401,10 @@
     <Page Include="Views\Controls\ProgressNotificationBar.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\FtpTraceWindow.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="Views\FreestyleDatabaseCheckerWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
