--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Neurotoxin.Godspeed.Shell.csproj
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Neurotoxin.Godspeed.Shell.csproj
@@ -203,6 +203,7 @@
     <Compile Include="Interfaces\IResourceManager.cs" />
     <Compile Include="Interfaces\IStatisticsViewModel.cs" />
     <Compile Include="Interfaces\ITitleRecognizer.cs" />
+    <Compile Include="Interfaces\ITreeSelectionViewModel.cs" />
     <Compile Include="Interfaces\IUserMessageViewModel.cs" />
     <Compile Include="Interfaces\IUserSettings.cs" />
     <Compile Include="Interfaces\IWindowManager.cs" />
@@ -279,6 +280,9 @@
     </Compile>
     <Compile Include="Views\Controls\ProgressNotificationBar.xaml.cs">
       <DependentUpon>ProgressNotificationBar.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Dialogs\TreeSelectorDialog.xaml.cs">
+      <DependentUpon>TreeSelectorDialog.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\FtpTraceWindow.xaml.cs">
       <DependentUpon>FtpTraceWindow.xaml</DependentUpon>
@@ -401,6 +405,10 @@
     <Page Include="Views\Controls\ProgressNotificationBar.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\Dialogs\TreeSelectorDialog.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="Views\FtpTraceWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
