Fixing previous commit

--- a/Resources/ResharperMacros/ResharperMacros.csproj
+++ b/Resources/ResharperMacros/ResharperMacros.csproj
@@ -54,7 +54,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="LowercaseHypens.cs" />
+    <Compile Include="Uppercase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
