- FTP stream refactor - Removing RichTextBox from Presentation (WPF Toolkit has it already) - Fixing connection existence check

--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Core/Neurotoxin.Godspeed.Core.csproj
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Core/Neurotoxin.Godspeed.Core.csproj
@@ -170,6 +170,7 @@
     <Compile Include="Net\Cryptography\XSHA256.cs" />
     <Compile Include="Net\Cryptography\XSHA512.cs" />
     <Compile Include="Net\FtpClient.cs" />
+    <Compile Include="Net\FtpControlConnection.cs" />
     <Compile Include="Net\FtpDataStream.cs" />
     <Compile Include="Net\FtpEnums.cs" />
     <Compile Include="Net\FtpExceptions.cs" />
