- Finishing FSD/F3 DB checker - Introducing FSD/F3 menu item - Calculate occupied space hotkey change - Ctrl+Enter for launch

--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Neurotoxin.Godspeed.Shell.csproj
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Neurotoxin.Godspeed.Shell.csproj
@@ -744,6 +744,9 @@
   <ItemGroup>
     <Resource Include="Resources\header.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\xex.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>echo off
